# KAMAZ_Jupyter

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: data_processing.ipynb  exploration.ipynb
src/analysis/: allanDev.py  compare_viz.py  frames.py  metrics.py  plot_style.py  run_methods.py  visualization.py
src/config/: config.py  constants.py
src/navigation/: ekf.py  fgo.py  sins.py  ukf.py
src/preprocessing/: preprocess.py  real_data_adapter.py  run_real.py  segmentation.py
src/simulation/: data_loader.py  motion_generator.py  run_simulation.py  vibration.py
