[project]
name = "kamaz-jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ahrs>=0.4.0",
    "filterpy>=1.4.5",
    "gnss-ins-sim",
    "gtsam>=4.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
gnss-ins-sim = { git = "https://github.com/Aceinna/gnss-ins-sim.git" }
