[project]
name = "kamaz-jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ahrs>=0.4.0",
    "filterpy>=1.4.5",
    "gnss-ins-sim",
    "gtsam>=4.2",
    "ipympl>=0.10.0",
    "matplotlib>=3.7",
    "numpy<2",
    "pandas<2.2",
    "pyarrow>=12,<16",
    "pyqt5==5.15.11",
    "scipy<1.13",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
gnss-ins-sim = { git = "https://github.com/Aceinna/gnss-ins-sim.git" }
